# aegnix-platform-core

./: README.md  pyproject.toml
aegnix_core/: crypto.py  envelope.py  logger.py  storage.py  utils.py
aegnix_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aegnix_core/storage/: __init__.py
aegnix_core/storage/providers/: sqlite_provider.py
aegnix_core/transport/: __init__.py  transport_base.py  transport_kafka.py  transport_local.py
db/: abi_state.db
tests/: test_capabilities.py  test_core.py  test_transport_factory.py
