[project]
name = "aegnix-core"
version = "0.1.4"
description = "Core primitives for the AEGNIX Swarm Framework"
authors = [{ name = "Invictus Insights R&D" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["cryptography>=42.0.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aegnix_core"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
